--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <p>"Blink Facility Solutions has been instrumental in keeping our office environment immaculate. Their attention to detail and proactive approach make them a valued partner."</p>
             </blockquote>
             <blockquote>
-                <p>"We switched to Blink Facility Solutions for their reliability and consistent quality. They have exceeded our expectations with their thoroughness and professionalism."</p>
+                <p>"We switched to <a href="https://roberthinsom.github.io/blinkfacilitysolutions/">Blink Facility Solutions</a> for their reliability and consistent quality. They have exceeded our expectations with their thoroughness and professionalism."</p>
             </blockquote>
         </div>
 
