--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
             margin-top: 5px;
         }
     </style>
+    <style>
+    .centered {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh; /* Adjust as needed */
+    }
+</style>
 </head>
 <body>
     <div class="container">
@@ -119,5 +127,8 @@
             <p>Blink Facility Solutions is committed to enhancing workplace cleanliness and hygiene standards. Contact us today to discover how we can elevate your business environment with top-tier commercial cleaning services.</p>
         </div>
     </div>
+    <div class="centered">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3233.5564250204943!2d-78.59679348479516!3d35.859878827761094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89ac59bb550b1f03%3A0x9b09f5f3936411cc!2s5847%20McHines%20Pl%2C%20Raleigh%2C%20NC%2027616!5e0!3m2!1sen!2sus!4v1645122972094!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+</div>
 </body>
 </html>
